--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -1,4 +1,10 @@
 body {
-    background-color: lightgray;
+    background-color: rgba(173, 216, 230, 0.7);
+    background-image: url("/img/silvercar-jae-park-right.jpg");
+    background-size: cover;
     font-family: 'Rubik', sans-serif;
 }
+
+/*a {*/
+/*    text-decoration: none;*/
+/*}*/
